--- a/src/main/resources/templates/client-code/http-util.kt.hbs
+++ b/src/main/resources/templates/client-code/http-util.kt.hbs
@@ -29,7 +29,7 @@ fun HttpUrl.Builder.queryParam(key: String, values: List<Any>?, explode: Boolean
 }
 
 @Suppress("unused")
-fun Headers.Builder.header(key: String, value: T?): Headers.Builder = this.apply {
+fun Headers.Builder.header(key: String, value: Any?): Headers.Builder = this.apply {
     if (value != null) this.add(key, value.toString())
 }
 
